--- a/src/app/components/main/canvas/canvas.component.scss
+++ b/src/app/components/main/canvas/canvas.component.scss
@@ -84,6 +84,11 @@ mwlResizable {
     line-height: 1.5;
     background-clip: padding-box;
 }
+.container {
+    border: solid;
+    width: 50px;
+    height: 50px;
+}
 .inside-ibox {
     border-top: 1px !important;
     display: flex;
