--- a/src/app/components/main/menu/top-navbar/top-navbar.component.html
+++ b/src/app/components/main/menu/top-navbar/top-navbar.component.html
@@ -18,7 +18,7 @@
                     <li>
                         <a (click)="logout()">
                             <i class="fa fa-sign-out"></i>
-                            Sair
+                            Dashboard
                         </a>
                     </li>
                 </ul>
