Change software language to english

--- a/ide/src/app/components/main/canvas/canvas.component.scss
+++ b/ide/src/app/components/main/canvas/canvas.component.scss
@@ -146,3 +146,8 @@ input::placeholder {
     padding-left: 0 !important;
     padding-right: 0 !important;
 }
+.img-field {
+    width: 100px;
+    height: 100px;
+    border: solid 0.5px #cccccc;
+}
